fixed alignment issues

--- a/src/main/java/ReactView/react/src/pages/styles.css
+++ b/src/main/java/ReactView/react/src/pages/styles.css
@@ -39,6 +39,11 @@
     font-size: 2em;
 }
 
+.back {
+    font-family: 'Borsok';
+    font-size: 2em;
+}
+
 .breakfast {
     font-family: 'Borsok';
     font-size: 2em;
